# comedy_open_mics

./: .flake8  .gitignore  .pre-commit-config.yaml  .replit  Makefile  README.md  app.py  cookies.txt  direct_migration.py  email_service.py  format-check.sh  forms.py  migrate_data.py  migrate_database.py  models.py  models_backup.py  models_new.py  pyproject.toml  pytest.ini  replit.md  replit_auth.py  requirements-dev.txt  routes.py  routes_simple.py  seed_data.py  test_app.py  test_app_fixed.py  test_maps.html
.github/workflows/: ci.yml  main.yml
attached_assets/: Pasted--2025-07-11-20-18-39-0000-5772-INFO-Handling-signal-winch-2025-07-11-20-18-39-0000-5772--1752265235385_1752265235385.txt  Pasted--2025-07-11-21-40-01-0000-12319-INFO-Handling-signal-winch-ERROR-app-Exception-on-event-323--1752270078443_1752270078443.txt  Pasted--test-database-constraints-client-FlaskCli-1748719309835.txt  Pasted--test-event-management-workflow-client-FlaskCli-1748720165512.txt  Pasted--test-full-user-journey-client-FlaskCli-1748720075331.txt  Pasted--test-show-management-workflow-client-FlaskCli-1748719229286.txt  Pasted--tests-coverage-cov-1748633122843.txt  Pasted-2025-05-30T19-24-52-5186791Z-tests-coverage--1748718355887.txt  Pasted-2025-05-31T19-12-25-3694951Z-tests-test-integration-old-py-307-AssertionError-2025-05-31T19-12-25-3-1748718810192.txt  Pasted-ERROR-app-Exception-on-comedian-dashboard-GET-Traceback-most-recent-call-last-File-home-ru-1748748367085.txt  Pasted-ERROR-app-Exception-on-host-dashboard-GET-Traceback-most-recent-call-last-File-home-runner-1748748303956.txt  Pasted-ERROR-app-Exception-on-manage-lineup-194-GET-Traceback-most-recent-call-last-File-home-run-1752260207106_1752260207106.txt  e4b2db0a-987f-4d4f-b5a0-9fbf77522a91-00-2a3qqf7e4du8n.picard.replit.dev_api_show_Archive [25-07-11 17-30-42]_1752269461806.har
scripts/: format.py  pre-commit-hook.sh
static/css/: style.css
static/js/: lineup.js
templates/: 403.html  base.html  calendar.html  combined_dashboard.html  index.html  unified_dashboard.html
templates/auth/: login.html  register.html
tests/: test_app_utils.py  test_email_service.py  test_forms.py  test_integration.py  test_integration_ci_fixed.py  test_integration_fixed.py  test_integration_new.py  test_integration_old.py  test_models.py  test_replit_auth.py  test_routes.py
(+10 files in other folders)
