[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comedy-open-mic-manager"
version = "1.0.0"
description = "A comprehensive Comedy Open Mic management platform"
authors = [{name = "Comedy Open Mic Manager Team"}]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-wtf>=1.1.0",
    "wtforms>=3.0.0",
    "werkzeug>=2.3.0",
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.38.26",
    "botocore>=1.38.26",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.41",
    "pytest>=8.3.5",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "email-validator>=2.2.0",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["tests*", "static*", "templates*", "attached_assets*", ".git*", "__pycache__*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
